Fix: Direct url accession without token has been rejected by axios interceptor. Style: Horizontal scroll added to buttons of LeagueSelector. Min-width attributes added to responsive-layout css file. Disable user scalable option added in viewport. Feat: Top 3 player podium added to EloRankView. To get total of player statistics, league object pushed in leagues what fetched from server, it has undefined id attribute which causes requestion not included league param.

--- a/src/css/responsive-layout.css
+++ b/src/css/responsive-layout.css
@@ -11,9 +11,13 @@
   --responsive-xl: 1200px;
 }
 
+body{
+  min-width: 400px;
+}
+
 .container {
   width: 100%;
-  margin:auto;
+  margin:0 auto;
 }
 
 @media (min-width: 1200px){
